blip.tv (archived on 2013-12-22)
{
  "alexa_rank": 5805,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 9615,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.91,
  "homepage_snapshot_redirected_domain": "blip.tv",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131001085932id_/http://blip.tv/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131001085932id_/http%3A//blip.tv",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "blip.tv",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222222256id_/http%3A//blip.tv/privacy",
  "policy_title": "Privacy Policy | Blip",
  "policy_url": "blip.tv/privacy",
  "sha1": "39d19fce25c103128b0b24772c84b699ed96572e",
  "simhash": 4299209777540676378,
  "simhash_updated": false,
  "site_hostname": "blip.tv",
  "site_url": "http://blip.tv",
  "smog": 15.9,
  "strict_updated": true,
  "timestamp": "20131222222256",
  "word_count": 1515,
  "year": 2013
}

--- a/b/bl/bli/blip.tv.html
+++ b/b/bl/bli/blip.tv.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the blip.tv privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622030611id_/http%3A//blip.tv/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blip.tv privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222222256id_/http%3A//blip.tv/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml"><!--<![endif]--><head>
 		<!--startup timer-->
 		<script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var _BLIP_loadtimer=(new Date()).getTime()</script>
 
 		
-			<link rel="stylesheet" type="text/css" href="http://a.blip.tv/skin/smooth/common.80749ec.css" media="screen">
-			<link rel="stylesheet" type="text/css" href="http://a.blip.tv/skin/smooth/About.80749ec.css" media="screen">
+			<link rel="stylesheet" type="text/css" href="http://a.blip.tv/skin/smooth/common.299c2c5.css" media="screen">
+			<link rel="stylesheet" type="text/css" href="http://a.blip.tv/skin/smooth/About.299c2c5.css" media="screen">
 
 		
 
@@ -48,7 +48,7 @@
 <meta name="fb_channel_url" value="http://a.blip.tv/channel.html">
 
 
-	<script type="text/javascript" src="http://a.blip.tv/scripts/BLIP/DestinationAnalytics.80749ec.js"></script>
+	<script type="text/javascript" src="http://a.blip.tv/scripts/BLIP/DestinationAnalytics.299c2c5.js"></script>
 
 
 
@@ -79,7 +79,7 @@ _gaq.push(['_trackPageview']);
 	<div id="HeaderContents">
 		<a href="/" class="Logo" alt="Blip" title="Blip Home" data-link-text="blip logo"></a>
 
-		<div class="Tagline"><p><a href="/discover"><span>Discover Your Blip</span>.</a> What do you want to watch?</p></div>
+		<div class="Tagline"><p><a href="http://blip.tv/newfallshows/"><span>New Fall Shows</span>:</a> New episodes every day!</p></div>
 
 		<div class="ButtonContainer">
 			<a href="#" class="CategoryMenuButton MastheadButton"><span>Categories <i class="base">V</i><i class="active">x</i></span></a>
@@ -103,17 +103,18 @@ _gaq.push(['_trackPageview']);
 	</div> <!-- end #HeaderContents -->
 	<div class="Nav">
 		<div class="NavContents">
+			<a href="http://videos.thepetcollective.tv?utm_source=blip_site&amp;utm_medium=referral&amp;utm_campaign=tpc_site_20130722" data-link-text="the pet collective" class="tpc_MainNavLink" target="_blank">Pets</a>
 			<a href="/animation-and-comics-videos" data-link-text="animation">Animation</a>
 			<a href="/comedy-videos" data-link-text="comedy">Comedy</a>
 			<a href="/drama-videos" data-link-text="drama">Drama</a>
 			<a href="/celebrity-entertainment-news-videos" data-link-text="entertainment">Entertainment</a>
 			<a href="/food-drink-and-travel-videos" data-link-text="food">Food</a>
 			<a href="/music-videos" data-link-text="music">Music</a>
-			<a href="/apps-tech-and-gadgets-videos" data-link-text="tech gadgets">Tech &amp; Gadgets</a>
 			<a href="/videogames-videos" data-link-text="video games">Video Games</a>
 			<div class="MoreNavContainer HoverDropDown">
 				<a href="#" class="MoreNav HeaderCaption">More</a>
 				<div class="extendedNavContents">
+					<a href="/apps-tech-and-gadgets-videos" data-link-text="tech gadgets">Tech &amp; Gadgets</a>
 					<a href="/fashion-and-beauty-videos" data-link-text="fashion">Fashion</a>
 					<a href="/health-and-fitness-videos" data-link-text="health">Health</a>
 					<a href="/home-and-family-videos" data-link-text="home family">Home &amp; Family</a>
@@ -135,9 +136,11 @@ _gaq.push(['_trackPageview']);
 				<a href="/music-videos" data-link-text="music">Music</a>
 				<a href="/apps-tech-and-gadgets-videos" data-link-text="tech gadgets">Tech &amp; Gadgets</a>
 				<a href="/videogames-videos" data-link-text="video games">Video Games</a>
+				<a href="/education-documentary-videos" data-link-text="learning">Learning</a>
 			</div>
 
 			<div class="Column">
+				<a href="http://videos.thepetcollective.tv?utm_source=blip_site&amp;utm_medium=referral&amp;utm_campaign=tpc_site_20130722" data-link-text="the pet collective" class="tpc_MainNavLink" target="_blank">Pets</a>
 				<a href="/fashion-and-beauty-videos" data-link-text="fashion">Fashion</a>
 				<a href="/health-and-fitness-videos" data-link-text="health">Health</a>
 				<a href="/home-and-family-videos" data-link-text="home family">Home &amp; Family</a>
@@ -145,7 +148,6 @@ _gaq.push(['_trackPageview']);
 				<a href="/sports-and-cars-videos" data-link-text="sports cars">Sports &amp; Cars</a>
 				<a href="/talk-and-interview-shows-videos" data-link-text="interview">Interview</a>
 				<a href="/diy-how-to-videos" data-link-text="how to">How To</a>
-				<a href="/education-documentary-videos" data-link-text="learning">Learning</a>
 			</div>
 		</div>
 	</div>
@@ -242,12 +244,10 @@ _gaq.push(['_trackPageview']);
 		<div class="centerList">
 			<ul class="Links">
 				<li><a href="/about" data-link-text="about blip">About Blip</a></li>
-				<li><a href="/people" data-link-text="people">People</a></li>
 				<li><a href="/principles" data-link-text="principles">Principles</a></li>
+				<li><a href="http://support.blip.com" target="_blank" data-link-text="support">Support</a></li>
 				<li><a href="/advertise" data-link-text="advertisers">Advertisers</a></li>
 				<li><a href="http://blog.blip.com" target="_blank" data-link-text="blog">Blog</a></li>
-				<li><a href="/contact" data-link-text="contact">Contact</a></li>
-				<li><a href="/careers" data-link-text="careers">Careers</a></li>
 				<li><a href="http://press.blip.com" target="_blank" data-link-text="press">Press</a></li>
 				<li><a href="/privacy" data-link-text="privacy policy">Privacy Policy</a></li>
 				<li><a href="/copyright" data-link-text="copyright">Copyright</a></li>
@@ -279,17 +279,21 @@ _gaq.push(['_trackPageview']);
 			<p class="Tagline">Discover the best in original web series.</p>
 			<p class="CopyrightText">© 2013 Blip Networks, Inc. All Rights Reserved.</p>
 			<a href="http://nytm.org/made" data-link-text="made in ny">Made in NY ♥</a>
-		<p></p>
-	</div> <!-- end #Footer -->
+			<p>Blip is part of Maker Studios</p>
+			<p>
+				<a href="http://makerstudios.com/" data-link-text="maker-studios-logo" target="_blank" class="centeredLink"><img src="/skin/smooth/images/footer/maker-studios-logo.gif" alt="Maker Studios logo"></a><a>
+			</a></p><a>
+		</a></div><a>
+	</a></div><a> <!-- end #Footer -->
 
-</div> <!-- end #FooterWrap -->
+</a></div><a> <!-- end #FooterWrap -->
 
 
-
-	</div>
 
 	
-	<script type="text/javascript" src="http://a.blip.tv/scripts/BLIP/DestinationCommon.80749ec.js"></script>
+
+	
+	<script type="text/javascript" src="http://a.blip.tv/scripts/BLIP/DestinationCommon.299c2c5.js"></script>
 
 
 
@@ -311,7 +315,7 @@ el.parentNode.insertBefore(s, el);
 })();
 </script>
 <noscript>
-<img src="http://b.scorecardresearch.com/p?c1=2&c2=6708843&c5=&cv=2.0&cj=1" />
+<img src="http://b.scorecardresearch.com/p?c1=2&c2=6708843&cv=2.0&cj=1" />
 </noscript>
 <!-- End comScore Tag -->
 
@@ -348,7 +352,10 @@ el.parentNode.insertBefore(s, el);
 			
 	
 <script type="text/javascript">
-var s_account = "blipdev"; // change to a tmpl_if when we launch 
+
+	var s_account = "blipprod";
+
+
 </script>
 <!-- SiteCatalyst code version: H.25.4.
 Copyright 1996-2013 Adobe, Inc. All Rights Reserved
@@ -365,12 +372,17 @@ s[O.EVAR.FACEBOOK_CONNECT_STATUS]=O.getSubscriberStatus();
 var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <script language="JavaScript" type="text/javascript"><!--
 if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
-//--></script><noscript><img src="http://blip.d2.sc.omtrdc.net/b/ss/blipdev/1/H.25.4--NS/0"
-height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
+//--></script>
+
+
+	<noscript>
+		<img src="http://blip.d2.sc.omtrdc.net/b/ss/blipprod/1/H.25.4--NS/0" height="1" width="1" border="0" alt="" />
+	</noscript><!--/DO NOT REMOVE/-->
+<!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.25.4. -->
 
 
 
 
 
-</body></html>
+</a></body></html>
