--- a/i/iq/iqp/iqpc.sg.html
+++ b/i/iq/iqp/iqpc.sg.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iqpc.sg privacy policy that was archived on 2013-05-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130528023654id_/http%3A//www.iqpc.sg/About/Privacy-Policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iqpc.sg privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222223244id_/http%3A//www.iqpc.sg/About/Privacy-Policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <base href="http://www.iqpc.sg/PrivacyPolicy.aspx">
@@ -7,13 +7,14 @@
 	Business Conferences,  Events &amp; Training Seminars | Privacy Policy
 </title><link rel="stylesheet" type="text/css" href="/css/reset.css"><link rel="stylesheet" type="text/css" href="/css/default.css"><link rel="stylesheet" type="text/css" href="/css/jquery-ui-1.7.2.custom.css"><link rel="Stylesheet" type="text/css" href="/css/slideshow.css"><link href="/images/favicon.ico" rel="shortcut icon">
 
-    <script type="text/javascript" async="" src="https://sjs.bizographics.com/insight.min.js"></script><script type="text/javascript" src="/js/jquery-1.6.1.min.js"></script>
+    <script type="text/javascript" async="" src="https://sjs.bizographics.com/insight.min.js"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" src="/js/jquery-1.6.1.min.js"></script>
     <script type="text/javascript" src="/js/jquery.easing.1.3.min.js"></script>
     <script type="text/javascript" src="/js/jquery-ui-1.7.2.custom.min.js"></script>
     <script type="text/javascript" src="http://cdn.jquerytools.org/1.2.5/jquery.tools.min.js"></script>
     <script type="text/javascript" src="/js/jquery.nivo.slider.pack.js"></script>
     <script type="text/javascript" src="/js/jquery.tinyscrollbar.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.cycle.all.js"></script>
+	<script type="text/javascript" src="/js/jquery.easyslider.js"></script>
     <script type="text/javascript" src="/js/iqpc.global.js"></script>
 
     <!--[if lte IE 7]>
@@ -239,7 +240,7 @@
     <li><a href="#K">Notification of Changes</a></li>
 </ul>
 <p>
-    <em>Last Updated; 18 February 2004</em></p>
+    <em>Last Updated; October 23, 2012</em></p>
 <a id="#A" name="#A" class="bookmark" title="#A"></a>
 <h2>
     Commitment to User Privacy</h2>
@@ -324,20 +325,15 @@
 <h2>
     Information Sharing: Who We Intend to Share Information With and Why</h2>
 <p>
-    We do not share, rent or sell our customer e-mail lists. We may share other contact
-    information with other professional organisations (including our event sponsors/exhibitors)
-    to promote similar products and services. If you do not want to make your details
-    available please email <a href="mailto:database@iqpc.com">database@iqpc.com</a>
-    indicating either or both of the statements below;</p>
+    We do not rent or sell our customer e-mail lists. We may share your contact information with professional organisations (including our event sponsors/exhibitors) to promote similar products and services related to your area of interest. If you do not want to make your details available please email <a href="mailto:database@iqpc.com">database@iqpc.com</a> indicating either or both of the statements below;</p>
 <p>
-    <strong>I do not wish to have my details made available to other organisations<br>
+    <strong>
+	    I do not wish to have my details made available to other organisations<br>
         I do not wish to receive information about IQPC events or services<br>
     </strong>
 </p>
 <p>
-    No list supplied by IQPC may be used by anyone other than for the confidential use
-    of the original mailer. All lists are seeded with decoy names to protect against
-    abuse; violators will be prosecuted.</p>
+    No list supplied by IQPC may be used by anyone other than for the confidential use of the original mailer. All lists are seeded with decoy names to protect against abuse; violators will be prosecuted.</p>
 <p align="right">
     <a href="#top">Back to Top</a></p>
 <div class="hr">
@@ -488,6 +484,10 @@
         </div>
     </div>
 
+<div id="Advert" style="display: none;">
+	<a title="connecticum Jobmesse" href="http://www.connecticum.de/jobmesse" target="_blank"><img src="images/de-image.png"></a>
+</div>
+
 <div class="sg-pic" style="display: none;">
 	<h2 class="heading" style="background: #7B0000; padding: 6px 12px;">60% Cash Back for Singaporeans</h2>
 	<div class="content" style="font-size: 12px;">
@@ -514,38 +514,10 @@ ul.FbLinks li { padding-bottom: 10px; font-size: 10px; }
     <!-- tab "panes" -->
     <div class="panes">
         <div class="connected">
-            <script src="http://widgets.twimg.com/j/2/widget.js"></script>
-            <script>
-                new TWTR.Widget({
-                    version: 2,
-                    type: 'profile',
-                    rpp: 3,
-                    interval: 6000,
-                    width: 'auto',
-                    height: 300,
-                    theme: {
-                        shell: {
-                            background: '#ffffff',
-                            color: '#ffffff'
-                        },
-                        tweets: {
-                            background: '#838383',
-                            color: '#ffffff',
-                            links: '#84d4ff'
-                        }
-                    },
-                    features: {
-                        scrollbar: false,
-                        loop: false,
-                        live: false,
-                        hashtags: true,
-                        timestamp: true,
-                        avatars: false,
-                        behavior: 'all'
-                    }
-                }).render().setUser('iqpc').start();
-            </script>
-            <a href="http://twitter.com/iqpc" target="_blank">
+			<a class="twitter-timeline" href="https://twitter.com/iqpc" data-widget-id="349171487997050880">Tweets by @iqpc</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+            <br><br><a href="http://twitter.com/iqpc" target="_blank">
                 <img src="images/follow_iqpc.gif" alt="Twitter @IQPC"></a>
         </div>
 		<div class="connected">
@@ -567,7 +539,14 @@ ul.FbLinks li { padding-bottom: 10px; font-size: 10px; }
     </div>
 </div>
 	
-	<div id="IQPCOnline">
+	<h2 class="heading student" style="display: none;">Sponsor a Student</h2>
+<div class="content student" style="display: none;">
+	<p style="font-size: 13px;"><strong>At IQPC we recognize that today's students are tomorrow's leaders.</strong></p>
+	<p>Under the Sponsor a Student Scheme you may register ONE university student to the same event AT NO COST for every conference package booked and paid.</p>
+	<p><a href="/SponsorAStudent.aspx">Click here for more details.</a></p>
+</div>
+
+<div id="IQPCOnline">
 	<a href="/Opportunities/IQPC-Online"><img src="images/online_event_button.jpg" alt="IQPC Online"></a>
 </div>
 
@@ -650,7 +629,7 @@ ul.FbLinks li { padding-bottom: 10px; font-size: 10px; }
             Join IQPC and be part of a world class team of ambitious, talented people. People
             who are consistently pushing the boundaries of innovation in the world of conferences,
             seminars and knowledge management.<br>
-            » <a href="http://www.iqpc.com/careers" target="_blank">Learn More</a></p>
+            » <a href="http://careers.iqpc.com/" target="_blank">Learn More</a></p>
         <p>
             <strong>Enquire about an IQPC Media Partnership</strong></p>
         <p>
@@ -686,9 +665,7 @@ ul.FbLinks li { padding-bottom: 10px; font-size: 10px; }
         </ul>
         <a href="http://www.iqpc.com">
             <img src="images/iqpc_sm.png" alt="IQPC"></a>
-        <p>
-            Questions about IQPC's Conferences, Events or Training Seminars? Contact us on 1-800-882-8684
-            or email <a href="mailto:info@iqpc.com">info@iqpc.com</a> now! © 2012 IQPC.</p>
+        <p>Questions about IQPC's Conferences, Events or Training Seminars? Contact us on 1-800-882-8684 or email <a href="mailto:info@iqpc.com">info@iqpc.com</a> now! © 2013 IQPC.</p>
     </div>
 </div>
     </div><!-- #globalWrapper /end -->
