--- a/n/ne/net/netvibes.com.html
+++ b/n/ne/net/netvibes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netvibes.com privacy policy that was archived on 2013-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130616174942id_/http%3A//www.netvibes.com/static.php%3Fshow%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netvibes.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222231257id_/http%3A//www.netvibes.com/static.php%3Fshow%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en" id="www-netvibes-com"><head>
   <title>Netvibes</title>
@@ -7,8 +7,7 @@
   <meta http-equiv="Content-Script-Type" content="text/javascript">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="Description" content="">
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://cdn.netvibes.com/js/c/mootools.js?v=1651"></script> 
-  <script type="text/javascript">
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
       var NV_PATH = '/';
       var NV_HOST = 'www.netvibes.com';
       var NV_WWW = 'http://www.netvibes.com';
@@ -18,13 +17,13 @@
       var NV_AVATARS = 'avatars.netvibes.com';
       var NV_API = 'api.netvibes.com';
       var NV_API_PATH = '/api';
-      var App = {"urls":{"domain":"netvibes.com","domain_premium":"netvibesbusiness.com","startpage":"http:\/\/www.netvibes.com","static":"http:\/\/cdn.netvibes.com","api":"http:\/\/api.netvibes.com","eco":"http:\/\/eco.netvibes.com","eco_api":"http:\/\/api.eco.netvibes.com","storage":"http:\/\/avatars.netvibes.com","modules":"http:\/\/nvmodules.netvibes.com","premiumtos":"http:\/\/www.netvibes.com\/static.php?show=premium-tos","api_rel":"\/api","uwa_platform":"http:\/\/uwa.netvibes.com","signin":"\/signin","signout":"\/signout","wap":"http:\/\/wap.netvibes.com","iphone":"http:\/\/iphone.netvibes.com","android":"http:\/\/android.netvibes.com","business":"http:\/\/business.netvibes.com\/sponsored-placement.php","vip":"http:\/\/vip.netvibes.com","help":"http:\/\/help.netvibes.com","faq":"http:\/\/faq.netvibes.com","privacy":"http:\/\/www.netvibes.com\/static.php?show=privacy","tos":"http:\/\/www.netvibes.com\/static.php?show=tos","contact":"http:\/\/www.netvibes.com\/static.php?show=feedback","host":"www.netvibes.com","fullHost":"http:\/\/www.netvibes.com","scheme":"http:\/\/"},"apiKeys":{"facebook_connect":{"key":"aa2d89653323aa3b47f0003d8aa4a3ca","appid":"30599107238"},"facebook_connect-MyStart":{"key":"0a2a83a7e55f0fd29317aedc54dbe846"},"google_mapapi":"ABQIAAAAIQVKzprS8rSCancA4oT7FRRn-2BdzdfTbnrBtE0lKU3w8k0dVxR3_Ji9KX1pKDn-k4OeHlYgoQ5uHg","yahoo_mapapi":"4JV2Q2vV34FqbxJC0RqU6NLiQefM7mT7phSasXa0fD7Q8xfB7MVJdbelmLWtl9g-","oauth_linkedin":{"key":"FiMUC8Fl8kiu_1JI0R_EXMuBOzXe19OOzq9Qp_JyzGkYa_uiFy0lqoPVWr4kvZm-","endpoint_request":"https:\/\/api.linkedin.com\/uas\/oauth\/requestToken","endpoint_auth":"https:\/\/api.linkedin.com\/uas\/oauth\/authorize","endpoint_access":"https:\/\/api.linkedin.com\/uas\/oauth\/accessToken","authMethod":"POST"},"request_params":{"scope":"rw_nus,r_network,r_fullprofile,r_contactinfo"},"google_cseid":"partner-pub-2262783781756955:yocmea-734h","oauth_googleanalytics":{"key":"www.netvibes.com","endpoint_request":"https:\/\/www.google.com\/accounts\/OAuthGetRequestToken","endpoint_auth":"https:\/\/www.google.com\/accounts\/OAuthAuthorizeToken","endpoint_access":"https:\/\/www.google.com\/accounts\/OAuthGetAccessToken","request_params":{"scope":"https:\/\/www.google.com\/analytics\/feeds"},"authMethod":"GET"},"bluekiwi":{"id":"d726f362f171e297f26d"},"recaptcha":{"key":"6LeDXc4SAAAAAGpQYFoUPn4UZhyVFnUg5Dpn4E0X"},"imageshack":{"key":"Z3EAY8Q9a6370051793a6d0082f07a48e7aa8606"},"oauth_twitter":{"key":"uCluYZCh5KpwwPyqhDn4rA","endpoint_request":"https:\/\/api.twitter.com\/oauth\/request_token","endpoint_auth":"https:\/\/api.twitter.com\/oauth\/authorize","endpoint_access":"https:\/\/api.twitter.com\/oauth\/access_token","authMethod":"GET"}}};
+      var App = {"urls":{"host":"www.netvibes.com","fullHost":"http:\/\/www.netvibes.com","scheme":"http:\/\/","domain":"netvibes.com","domain_premium":"netvibesbusiness.com","startpage":"http:\/\/www.netvibes.com","static":"http:\/\/cdn.netvibes.com","api":"http:\/\/api.netvibes.com","eco":"http:\/\/eco.netvibes.com","eco_api":"http:\/\/api.eco.netvibes.com","storage":"http:\/\/avatars.netvibes.com","modules":"http:\/\/nvmodules.netvibes.com","premiumtos":"http:\/\/www.netvibes.com\/static.php?show=premium-tos","api_rel":"\/api","uwa_platform":"http:\/\/uwa.netvibes.com","signin":"\/signin","signout":"\/signout","business":"http:\/\/business.netvibes.com\/sponsored-placement.php","vip":"http:\/\/vip.netvibes.com","help":"http:\/\/help.netvibes.com","faq":"http:\/\/faq.netvibes.com","translate":"http:\/\/translate.netvibes.com","privacy":"http:\/\/www.netvibes.com\/static.php?show=privacy","tos":"http:\/\/www.netvibes.com\/static.php?show=tos","contact":"http:\/\/www.netvibes.com\/static.php?show=feedback"},"apiKeys":{"facebook_connect":{"key":"aa2d89653323aa3b47f0003d8aa4a3ca","appid":"30599107238"},"facebook_connect-MyStart":{"key":"0a2a83a7e55f0fd29317aedc54dbe846"},"google_mapapi":"ABQIAAAAIQVKzprS8rSCancA4oT7FRRn-2BdzdfTbnrBtE0lKU3w8k0dVxR3_Ji9KX1pKDn-k4OeHlYgoQ5uHg","yahoo_mapapi":"4JV2Q2vV34FqbxJC0RqU6NLiQefM7mT7phSasXa0fD7Q8xfB7MVJdbelmLWtl9g-","oauth_linkedin":{"key":"FiMUC8Fl8kiu_1JI0R_EXMuBOzXe19OOzq9Qp_JyzGkYa_uiFy0lqoPVWr4kvZm-","endpoint_request":"https:\/\/api.linkedin.com\/uas\/oauth\/requestToken","endpoint_auth":"https:\/\/api.linkedin.com\/uas\/oauth\/authorize","endpoint_access":"https:\/\/api.linkedin.com\/uas\/oauth\/accessToken","authMethod":"POST"},"request_params":{"scope":"rw_nus,r_network,r_fullprofile,r_contactinfo"},"google_cseid":"partner-pub-2262783781756955:yocmea-734h","oauth_googleanalytics":{"key":"www.netvibes.com","endpoint_request":"https:\/\/www.google.com\/accounts\/OAuthGetRequestToken","endpoint_auth":"https:\/\/www.google.com\/accounts\/OAuthAuthorizeToken","endpoint_access":"https:\/\/www.google.com\/accounts\/OAuthGetAccessToken","request_params":{"scope":"https:\/\/www.google.com\/analytics\/feeds"},"authMethod":"GET"},"bluekiwi":{"id":"d726f362f171e297f26d"},"recaptcha":{"key":"6LeDXc4SAAAAAGpQYFoUPn4UZhyVFnUg5Dpn4E0X"},"imageshack":{"key":"Z3EAY8Q9a6370051793a6d0082f07a48e7aa8606"},"oauth_twitter":{"key":"uCluYZCh5KpwwPyqhDn4rA","endpoint_request":"https:\/\/api.twitter.com\/oauth\/request_token","endpoint_auth":"https:\/\/api.twitter.com\/oauth\/authorize","endpoint_access":"https:\/\/api.twitter.com\/oauth\/access_token","authMethod":"GET"}}};
   </script>
-  <script type="text/javascript" src="http://cdn.netvibes.com/js/App/Components/App.ReCaptcha.js?v=1651"></script> 
-  <script type="text/javascript" src="/js/loc/loc_en_US.js?v=1651">
-  </script>
-      <link rel="stylesheet" type="text/css" href="http://cdn.netvibes.com/themes/base/static.css.m.css?v=845" media="screen">
-    <link rel="stylesheet" type="text/css" href="http://cdn.netvibes.com/themes/base/nv-account.css?v=845" media="screen">
+  <script src="http://cdn.netvibes.com/js/c/mootools.js?v=1727"></script>
+<script src="http://cdn.netvibes.com/js/App/Components/App.ReCaptcha.js?v=1727"></script>
+<link href="http://cdn.netvibes.com/css/uwa-controls.css.m.css?v=898" media="screen" rel="stylesheet" type="text/css">
+<link href="http://cdn.netvibes.com/css/base/static.css.m.css?v=898" media="screen" rel="stylesheet" type="text/css">
+<link href="http://cdn.netvibes.com/css/base/nv-account.css?v=898" media="screen" rel="stylesheet" type="text/css">
   </head>
 <body class="account">
     <div id="top">
@@ -364,7 +363,7 @@ Cardinet, 75017 Paris (France)</strong> or sending an e-mail at <strong>security
         
         <div id="footer-title">
             <div class="footer-wrapper autoclear">
-                <h3>About Netvibes</h3>
+                <h3>About</h3>
                 <h3>Explore</h3>
                 <h3>Business</h3>
                 <h3>Platform</h3>
@@ -375,109 +374,115 @@ Cardinet, 75017 Paris (France)</strong> or sending an e-mail at <strong>security
         <div id="footer-sections">
             <div class="footer-wrapper autoclear">
                 <ul class="footer-menu">
-                                        <li> 
-                           <a id="footerLink_vip" href="http://vip.netvibes.com">VIP program</a> 
-                    </li>
-                                        <li>
-                        <a id="footerLink_about" href="http://about.netvibes.com/">About us</a>
+                    <li>
+                        <a id="footerLink_about" href="http://about.netvibes.com">About us</a>
                     </li>
                                    
                     <li>
-                        <a id="footerLink_tos" href="/static.php?show=tos" rel="nofollow">Terms of service</a>
+                        <a id="footerLink_tos" href="http://www.netvibes.com/static.php?show=tos" rel="nofollow">Terms of service</a>
                     </li>
                     <li>
-                        <a id="footerLink_privacy" href="/static.php?show=privacy" rel="nofollow">Privacy Policy</a>
+                        <a id="footerLink_privacy" href="http://www.netvibes.com/static.php?show=privacy" rel="nofollow">Privacy Policy</a>
                     </li>
                     <li>
-                        <a id="footerLink_blog" href="http://blog.netvibes.com/">Blog</a>
+                        <a id="footerLink_blog" href="http://blog.netvibes.com">Blog</a>
                     </li>
                     <li>
                         <a id="footerLink_jobs" href="http://about.netvibes.com/jobs.php">Jobs</a>
                     </li>
                     <li>
-                        <a id="footerLink_jobs" href="http://press.netvibes.com/">Press</a>
+                        <a id="footerLink_blog" href="http://press.netvibes.com">Press</a>
                     </li>
                 </ul>
                 <ul class="footer-menu">
                     <li>
-                        <a id="footerLink_ecowidgets" href="http://eco.netvibes.com/widgets">Widgets</a>
+                        <a id="footerLink_mobile" href="http://mobile.netvibes.com">Mobile</a>
                     </li>
                     <li>
-                        <a id="footerLink_ecouniverses" href="http://eco.netvibes.com/universes">Pages</a>
+                        <a id="footerLink_ecoapps" href="http://eco.netvibes.com/apps">App gallery</a>
                     </li>
                     <li>
-                        <a id="footerLink_conversations" href="http://eco.netvibes.com/themes">Themes</a>
+                        <a id="footerLink_ecodashboards" href="http://eco.netvibes.com/dashboards">Public Dashboards</a>
                     </li>
                     <li>
                         <a id="footerLink_conversations" href="http://conversations.netvibes.com">Conversations</a>
                     </li>
-                </ul>
-                <ul class="footer-menu">
                     <li>
-                        <a id="footerLink_di" href="http://www.netvibes.com/en/">Overview</a>
-                    </li>
-                     <li>
-                            <a id="footerLink_featuredsolutions" href="http://www.netvibes.com/en/solutionsagencies">Solutions</a>
-                        </li>
-                        <li>
-                            <a id="footerLink_pricing" href="http://www.netvibes.com/en/pricing">Pricing</a>
-                        </li>
-                    <li>
-                        <a id="footerLink_di" href="http://www.netvibes.com/en/intelligence">Dashboard Intelligence</a>
+                        <a id="footerLink_insights" href="http://insights.netvibes.com">Insights</a>
                     </li>
                     <li>
-                        <a id="footerLink_di" href="http://insights.netvibes.com">Netvibes Insights</a>
-                    </li>
-                    <li>
-                        <a id="footerLink_nfe" href="http://www.netvibes.com/en/contact">Contact</a>
+                        <a id="footerLink_misodatademo" href="http://misodatademo.netvibesbusiness.com">MisoData Demo</a>
                     </li>
                 </ul>
                 <ul class="footer-menu">
                     <li>
-                        <a id="footerLink_api" href="http://dev.netvibes.com/doc/">API</a>
+                        <a id="footerLink_foragency" href="http://www.netvibes.com/en/agency">Netvibes for Agency</a>
                     </li>
                     <li>
-                        <a id="footerLink_dev" href="http://dev.netvibes.com/blog/">Developers</a>
+                        <a id="footerLink_forenterprise" href="http://www.netvibes.com/en/enterprise">Netvibes for Enterprise</a>
                     </li>
                     <li>
-                        <a id="footerLink_translate" href="http://translate.netvibes.com/">Translators</a>
+                        <a id="footerLink_forindividual" href="http://www.netvibes.com/en/individual">Netvibes for Individual</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_features" href="http://www.netvibes.com/en/featureslist">Features</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_pricing" href="http://www.netvibes.com/en/pricing">Pricing</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_getalivedemo" href="http://www.netvibes.com/en/contact">Get a live demo</a>
                     </li>
                 </ul>
                 <ul class="footer-menu">
-                     <li>
-                            <a id="footerLink_documentation" href="http://documentation.netvibes.com/">Documentation</a>
+                    <li>
+                        <a id="footerLink_devgetstarted" href="http://uwa.netvibes.com/docs/static-Hello_World.html">Get Started</a>
                     </li>
-                      <li>
-                            <a id="footerLink_faq" href="http://faq.netvibes.com">FAQ</a>
+                    <li>
+                        <a id="footerLink_devtutorials" href="http://uwa.netvibes.com/docs/static-Using_Preferences.html">Tutorials</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_devdocumentation" href="http://uwa.netvibes.com/docs/Core.html">Documentation</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_devfaq" href="http://uwa.netvibes.com/docs/static-FAQ.html">UWA FAQ</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_translators" href="http://translate.netvibes.com">Translators</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_tools" href="http://eco.netvibes.com/tools">Tools</a>
+                    </li>
+                </ul>
+                <ul class="footer-menu">
+                    <li>
+                        <a id="footerLink_faq" href="http://faq.netvibes.com">Users FAQ</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_documentation" href="http://documentation.netvibes.com">User documentation</a>
                     </li>
                     <li>
                         <a id="footerLink_customsupport" href="http://www.netvibes.com/static.php?show=customhelp">VIP/Premium support</a>
                     </li>
-                     <li>
-                            <a id="footerLink_tutorials" href="http://documentation.netvibes.com/doku.php?id=opencorpus" rel="nofollow">Tutorials</a>
-                        </li>
                     <li>
-                        <a id="footerLink_servicestatus" href="http://faq.netvibes.com/service_status">Service status</a>
+                        <a id="footerLink_vipprogram" href="http://vip.netvibes.com">VIP program</a>
                     </li>
                     <li>
-                        <a id="footerLink_feedback" href="http://www.netvibes.com/static.php?show=feedback" rel="nofollow">Contact us</a>
+                        <a id="footerLink_feedback" href="http://netvibes.uservoice.com">Feedbacks</a>
+                    </li>
+                    <li>
+                        <a id="footerLink_contactus" href="http://www.netvibes.com/static.php?show=feedback" rel="nofollow">Contact us</a>
                     </li>
                 </ul>
                 <ul class="footer-menu">
                     <li>
-                        <a id="footerLink_merchantcircle" href="http://www.merchantcircle.com/">MerchantCircle</a>
+                        <a id="footerLink_merchantcircle" href="http://www.merchantcircle.com">MerchantCircle</a>
                     </li>
                     <li>
-                        <a id="footerLink_wikio" href="http://www.wikio.fr/high-tech/internet/portails/netvibes">
-                            Wikio                        </a>
+                        <a id="footerLink_twingly" href="http://www.twingly.com">Twingly</a>
                     </li>
                     <li>
-                        <a id="footerLink_wikioShopping" href="http://www.wikio.fr/produit/accueil-2.html">
-                            Wikio Shopping                        </a>
-                    </li>
-                    <li>
-                        <a id="footerLink_odiogo" href="http://itunes.apple.com/fr/app/talking-netvibes-powered-by/id442157304?mt=8">
-                            Odiogo                        </a>
+                        <a id="footerLink_boardreader" href="http://boardreader.com">Boardreader</a>
                     </li>
                 </ul>
             </div>
@@ -486,17 +491,15 @@ Cardinet, 75017 Paris (France)</strong> or sending an e-mail at <strong>security
             <div class="footer-wrapper autoclear">
                 <div class="footer-line">
                     <span class="copyright">Netvibes, a <a href="http://www.3ds.com">Dassault Systèmes</a> company © 2013</span>
-                    <a class="feed" href="http://blog.netvibes.com/rss.php">RSS</a>
+                    <a class="feed" href="http://feeds.feedburner.com/NetvibesDevBlog">RSS</a>
                 </div>
                 <div class="footer-line">
                     <strong>Find Netvibes also on:</strong>
-                    <a href="http://wap.netvibes.com/">Wap</a>,
-                    <a href="http://iphone.netvibes.com/">iPhone</a>,
-                    <a href="http://android.netvibes.com/">Android</a>,
                     <a href="http://www.facebook.com/netvibes" target="_blank">Facebook</a>,
                     <a href="http://twitter.com/netvibes" target="_blank">Twitter</a>,
-                    <a rel="publisher" href=" https://plus.google.com/u/0/101028892277851620451" target="_blank">Google+</a>,
-                    <a href="http://www.flickr.com/photos/netvibes" target="_blank">Flickr</a>
+                    <a rel="publisher" href=" https://plus.google.com/+netvibes" target="_blank">Google+</a>,
+                    <a href="http://www.flickr.com/photos/netvibes" target="_blank">Flickr</a>,
+                    <a href="http://www.linkedin.com/company/netvibes" target="_blank">LinkedIn</a>
                 <div>
             </div>
         </div>
