--- a/b/ba/bak/bakerella.com.html
+++ b/b/ba/bak/bakerella.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bakerella.com privacy policy that was archived on 2013-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130525151636id_/http%3A//www.bakerella.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bakerella.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222231639id_/http%3A//www.bakerella.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head profile="http://gmpg.org/xfn/11">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -179,7 +179,7 @@ If you have questions about this privacy policy, related to the site, you should
 					<div class="featured-sweet">
                 <div class="inner">
                     <div class="img-holder">
-                        <a href="http://www.bakerella.com/easter-sweets/"><img src="http://www.bakerella.com/site/../images/2013/03/fs-easter.jpg" alt="image"></a>                    </div>
+                        <a href="http://www.bakerella.com/gingerbreads-heads/"><img src="http://www.bakerella.com/site/../images/2013/12/fs-gingerheads.jpg" alt="image"></a>                    </div>
                     <strong class="featured">Featured Sweet</strong>
                 </div>
             </div>
@@ -203,18 +203,8 @@ If you have questions about this privacy policy, related to the site, you should
 					</ul>
 				</div>				</div>
 			</div>
-		<span class="hide-title">Google Left</span>			<div class="textwidget"><script type="text/javascript"><!--
-google_ad_client = "ca-pub-6814639722969390";
-/* Left Medium */
-google_ad_slot = "6034674158";
-google_ad_width = 300;
-google_ad_height = 250;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></div>
 		<span class="hide-title">Left Custom Ad</span>			
-			<div class="execphpwidget"><div id="left-ad"><a href="http://www.amazon.com/gp/product/1452111162/ref=as_li_ss_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=1452111162&amp;linkCode=as2&amp;tag=bakerella-20/"><img src="http://www.bakerella.com/site/../images/2013/01/cake-pops-holiday.jpg"></a></div></div>
+			<div class="execphpwidget"><div id="left-ad"><a href="http://www.amazon.com/gp/product/0811876373/ref=as_li_ss_tl?ie=UTF8&amp;tag=bakerella-20&amp;linkCode=as2&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0811876373"><img src="http://www.bakerella.com/site/../images/2013/01/Cake-Pops.jpg"></a></div></div>
 		</div>
 <!--leftbar end -->
 			<!-- rightbar start-->
@@ -258,7 +248,7 @@ google_ad_height = 250;
 			
 			<span class="hide-title">Copyright info</span>			<div class="textwidget">© 2007-2012 Bakerella | <a href="http://www.bakerella.com/privacy/" title="Privacy Policy">Privacy Policy</a> | <a href="http://www.bakerella.com/giveaway-information" title="Giveaways">Giveaways</a><br>
 			<a href="https://advertisers.federatedmedia.net/explore/view/bakerella" title="Federated Media Publishing - Food">Federated Media Publishing - Food</a><br>
-			Site Development: <a href="http://omsh.com" title="WordPress Web Design">OMSH</a></div>
+			Site Development: <a href="http://heathersanders.com" title="Heather Sanders - Wordpress Web design">Heather Sanders</a></div>
 		
       </div><!-- .site-info -->
       <div class="site-generator">
