--- a/g/gi/gif/gifpal.com.html
+++ b/g/gi/gif/gifpal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gifpal.com privacy policy that was archived on 2013-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130630015252id_/http%3A//gifpal.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gifpal.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222232745id_/http%3A//www.gifpal.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head>
   <meta charset="utf-8">
@@ -122,7 +122,7 @@ We use third-party advertising companies to serve ads when you visit our website
 						<div align="center">
 
 
-<script src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js"></script><script type="text/javascript">document.write('<scr' + 'ipt type="text/javascript">(function () {try{VCM.media.render({sid:67263,media_id:3,media_type:7,version:"1.2"});} catch(e){document.write(\'<scr\' + \'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=67263&m=3&tp=7&d=j&t=n&exc=1"></scr\' + \'ipt>\');}}());</scr' + 'ipt>');</script><script type="text/javascript">(function () {try{VCM.media.render({sid:67263,media_id:3,media_type:7,version:"1.2"});} catch(e){document.write('<scr' + 'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=67263&m=3&tp=7&d=j&t=n&exc=1"></scr' + 'ipt>');}}());</script><script type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=67263&amp;m=3&amp;tp=7&amp;d=j&amp;t=n&amp;exc=1"></script><noscript><a href="http://media.fastclick.net/w/click.here?sid=67263&m=3&c=1" target="_blank"><img src="http://media.fastclick.net/w/get.media?sid=67263&m=3&tp=7&d=s&c=1&vcm_acv=1.2" width=160 height=600 border=1></a></noscript>
+<script type="text/javascript">var vclk_options = {sid:67263,media_id:3,media_type:7,version:"1.4"};</script><script class="vclk_pub_code" type="text/javascript" src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js?sid=67263&amp;media_id=3&amp;media_type=7&amp;version=1.4&amp;exc=1"></script><noscript><a href="http://media.fastclick.net/w/click.here?sid=67263&m=3&c=1" target="_blank"><img src="http://media.fastclick.net/w/get.media?sid=67263&m=3&tp=7&d=s&c=1&vcm_acv=1.4" width="160" height="600" border="1"></a></noscript>
 
 <br>
 <br>
@@ -145,14 +145,14 @@ We use third-party advertising companies to serve ads when you visit our website
   </div>
 
     <footer id="footer">
-  <p align="center">
+  <p style="text-align: center;">
   	  	
-<a href="http://www.facebook.com/gifpal" target="_blank" class="btn-fb-50 social_btn" alt="GIFPAL on Facebook" title="GIFPAL on Facebook"></a>	
-<a href="http://twitter.com/gifpal" class="btn-twitter-50 social_btn" target="_blank" alt="follow GIFPAL on Twitter" title="follow GIFPAL on Twitter"></a>	
-<a href="http://gifpal.tumblr.com/" class="btn-tumblr-50 social_btn" target="_blank" alt="follow GIFPAL on Tumblr" title="follow GIFPAL on Tumblr"></a>	
-<a href="https://plus.google.com/113151719262675674441" class="btn-gplus-50 social_btn" target="_blank" alt="GIFPAL on Google+" title="GIFPAL on Google+"></a>	
+<a href="http://www.facebook.com/gifpal" target="_blank" class="btn-fb-50 social_btn" title="GIFPAL on Facebook"></a>	
+<a href="http://twitter.com/gifpal" class="btn-twitter-50 social_btn" target="_blank" title="follow GIFPAL on Twitter"></a>	
+<a href="http://gifpal.tumblr.com/" class="btn-tumblr-50 social_btn" target="_blank" title="follow GIFPAL on Tumblr"></a>	
+<a href="https://plus.google.com/113151719262675674441" class="btn-gplus-50 social_btn" target="_blank" title="GIFPAL on Google+"></a>	
   	
-  	<a href="https://chrome.google.com/webstore/detail/noohoboklgjeccnihfkbdakbchbhjlch" class="btn-chrome-50 social_btn" target="_blank" alt="GIFPAL in chrome webstore" title="GIFPAL in chrome webstore" id="btnChrome"></a>
+  	<a href="https://chrome.google.com/webstore/detail/noohoboklgjeccnihfkbdakbchbhjlch" class="btn-chrome-50 social_btn" target="_blank" title="GIFPAL in chrome webstore" id="btnChrome"></a>
 
   </p>
 		© GifPal.com | <a href="/">Home</a> | <a href="/gallery/">Gallery</a>  | <a href="/gallery/top-today/">Popular Today</a>  | <a href="/gallery/top-week/">Popular This Week</a>  | <a href="/gallery/top/">Popular All Time</a>  | <a href="http://blog.gifpal.com">Blog</a>    | <a href="/help/">Help</a>  | <a href="/privacy/">Privacy Policy</a>  | <a id="contactlink" href="/contact.php" target="_blank">Contact Us</a>
