adultsearch.com (archived on 2013-12-23)
{
  "alexa_rank": 14387,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 10739,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.28,
  "homepage_snapshot_redirected_domain": "adultsearch.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130929174243id_/http://adultsearch.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130929174243id_/http%3A//adultsearch.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "adultsearch.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131223024855id_/http%3A//adultsearch.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "adultsearch.com/privacy-policy",
  "sha1": "a225f14b6d6b05ee4fdfe433d5d554400e8e5761",
  "simhash": 11284142212068931943,
  "simhash_updated": false,
  "site_hostname": "adultsearch.com",
  "site_url": "http://adultsearch.com",
  "smog": 13.45,
  "strict_updated": true,
  "timestamp": "20131223024855",
  "word_count": 1763,
  "year": 2013
}

--- a/a/ad/adu/adultsearch.com.html
+++ b/a/ad/adu/adultsearch.com.html
@@ -1,16 +1,17 @@
-<!--The following is the downloaded HTML source of the adultsearch.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622062438id_/http%3A//adultsearch.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adultsearch.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223024855id_/http%3A//adultsearch.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="RATING" content="RTA-5042-1996-1400-1577-RTA">
 <title>Privacy Policy</title>
 <link rel="icon" type="image/png" href="/favicon.ico">
-<meta name="description" content="Female Escorts (93), Body Rubs (9)">
+<meta name="description" content="Female Escorts (47), TS/TV Shemale Escorts (2), Body Rubs (3)">
+<meta name="msvalidate.01" content="80B16E492917D146B4169184BFFE3118">
 <link rel="canonical" href="http://adultsearch.com/privacy-policy"><link href="//img.adultsearch.com/css/as16.css?5" rel="stylesheet" type="text/css">
-<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://engine.adzerk.net/ados.js"></script><script type="text/javascript" src="/js/jquery.js?183"></script>
+<script async="" type="text/javascript" src="https://d.buyescorttraffic.com/ad_srv.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://engine.adzerk.net/ados.js"></script><script type="text/javascript" src="/js/jquery.js?183"></script>
 <script type="text/javascript" src="/js/tools/fancybox/jquery.fancybox-1.3.1.pack.js"></script>
-<link href="/css/wrapper.css?14" rel="stylesheet" type="text/css">
+<link href="/css/wrapper.css?15" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="//img.adultsearch.com/js/ui/jquery-ui-1.9.1.custom.min.js"></script>
 <link href="//img.adultsearch.com/js/ui/start/jquery-ui-1.9.1.custom.min.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="//img.adultsearch.com/js/main.js"></script>
@@ -55,15 +56,10 @@ if(document.location.protocol=='http:'){
   <div id="header">
     <div id="topnav">
       <ul class="left">
-        <a href="http://adultsearch.com/homepage" class="leftborder" title="Adult Search Engine">Adult Search</a><a href="http://www.bigdoggie.net/" target="_blank" title="Escort Reviews">BigDoggie</a><a href="http://www.eroticmp.com/" target="_blank" title="Erotic Massage Parlors">EroticMP</a>
-<a href="http://www.tnaboard.com" target="_blank" title="Escort Board">TNA Board</a>
-<a href="http://adultsearch.com/blog" title="Adultsearch Blog">Blog</a>
-      </ul>
+        <a href="http://adultsearch.com/homepage" class="leftborder" title="Adult Search Engine">Adult Search</a><a href="http://www.bigdoggie.net/" target="_blank" title="Escort Reviews">BigDoggie</a><a href="http://www.eroticmp.com/" target="_blank" title="Erotic Massage Parlors">EroticMP</a><a href="http://www.tnaboard.com" target="_blank" title="Escort Board">TNA Board</a><a href="http://adultsearch.com/blog" title="Adultsearch Blog">Blog</a>      </ul>
             <ul class="navlogin">
 		
-    	<a href="/account/signup" class="leftborder" rel="nofollow">Sign Up</a>
-		<a href="/account/signin?origin=%2Fprivacy-policy" rel="nofollow">Member Login</a>
-		<a href="https://adultsearch.com/classifieds/posttype" title="Advertise on AdultSearch.com">Escort Advertising</a>
+    	<a href="/account/signup" class="leftborder" rel="nofollow">Sign Up</a><a href="/account/signin?origin=%2Fprivacy-policy" rel="nofollow">Member Login</a><a href="https://adultsearch.com/classifieds/posttype" title="Advertise on AdultSearch.com">Escort Advertising</a>
     </ul>
      
     </div>
@@ -107,9 +103,9 @@ ui_click : true
 	<h3 class="ContentlinksTitle">I. General.</h3>
 	<blockquote>
 	A. The operative parties referred to in this policy are Company and you, the user of this site. 
-	<p>1. <b>Websolutions Netherlands</b> are the publishers and/or operators of and are hereinafter referred to collectively as "Company." When 
+	<p>1. <b>ADT Search Media, INC</b> are the publishers and/or operators of and are hereinafter referred to collectively as "Company." When 
 first-person 
-pronouns are used in this Policy, (us, we, our, ours, etc.) these provisions are referring respectively to Websolutions Netherlands as applicable. 
+pronouns are used in this Policy, (us, we, our, ours, etc.) these provisions are referring respectively to ADT Search Media, INC as applicable. 
 Additionally, when the terms "The Site" or "Site" are used, these terms refer respectively to www.adultsearch.com as applicable. </p>
 	<p>2. <b>You, the User:</b>  As the user of this Site, this policy will refer to the user as "you" or through any second-person pronouns, 
 such as "yours," etc. Hereinafter, the user of the Site shall be referred to in applicable second-person pronouns. </p>
@@ -235,7 +231,7 @@ as advertisers, or other companies selling services similar to this Company's se
 	<h3 class="ContentlinksTitle">IX. Where to Direct Questions About Our Privacy Policy</h3>
 	<blockquote>
 	<p>If you have any questions about this Privacy Policy or the practices described hereunder, you may contact us from our <a href="/contact?where=/pp" rel="nofollow">contact 
-form</a>. You may also contact us by mail at Websolutions Netherlands, Singel 540, 1017 AZ Amsterdam, The Netherlands.</p>
+form</a>. You may also contact us by email at <a href="mailto:support@adultsearch.com">support@adultsearch.com</a>.</p>
 	</blockquote>
   </td>
  </tr>
@@ -248,9 +244,9 @@ form</a>. You may also contact us by mail at Websolutions Netherlands, Singel 54
   
   <div id="footerx">
     <div id="footer_content">
-<span class="foot_fb"><a href="http://www.facebook.com/adultsearchengine" target="_blank" title="Adult Search Facebook Page" alt="Adult Search Facebook Page"></a></span>
 
-<a href="/products/network.html" class="various" data-fancybox-type="iframe" title="All Our Sites">All Our Sites</a> |
+
+
 <a href="http://adultsearch.com/advertise/" class="o" title="CPC Advertising">CPC Advertising</a> |
 <a title="Privacy Policy" href="/privacy-policy">Privacy Policy</a> |
 <a href="/contact?where=%2Fprivacy-policy">Contact Us</a> |
@@ -339,6 +335,35 @@ jQuery(function() {
 
 -->
 </script>
+
+
+<!-- Begin BuyEscortTraffic Code -->
+<script async="" type="text/javascript">
+var ads = ads || {};
+ads.cmd = ads.cmd || [];
+(function() {
+var ad_script = document.createElement('script');
+ad_script.async = true;
+ad_script.type = 'text/javascript';
+var useSSL = 'https:' == document.location.protocol;
+ads.domain = 'd.buyescorttraffic.com';
+ad_script.src = (useSSL ? 'https:' : 'http:') + '//'+ads.domain+'/ad_srv.js';
+var node = document.getElementsByTagName('script')[0];
+node.parentNode.insertBefore(ad_script, node);
+})();</script>
+<script type="text/javascript">
+ads.cmd.push(function() {
+ // ads_exit_pop(network id, publisher id, zone id, time period in seconds where 86400 = 24 hours)
+ads_exit_pop(2, 37, 3314, 3600).setGroups([3314,3311]).setMediaTypes('exit-pop');
+
+//set keywords
+ads_setKeywords(['Escort']);
+
+ads_run();
+});
+</script>
+<!-- End BuyEscortTraffic Code -->
+
 
 
 
