opengl.org (archived on 2013-12-23)
{
  "alexa_rank": 45599,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 3062,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.23,
  "homepage_snapshot_redirected_domain": "opengl.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130930021906id_/http://www.opengl.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130930021906id_/http%3A//opengl.org",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "opengl.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131223063233id_/http%3A//www.opengl.org/legal",
  "policy_title": "OpenGL.org Privacy Policy",
  "policy_url": "opengl.org/legal",
  "sha1": "0002a512667c4126e91afc44b869e712df2ec22c",
  "simhash": 12239612199828281403,
  "simhash_updated": false,
  "site_hostname": "opengl.org",
  "site_url": "http://opengl.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131223063233",
  "word_count": 515,
  "year": 2013
}

--- a/o/op/ope/opengl.org.html
+++ b/o/op/ope/opengl.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the opengl.org privacy policy that was archived on 2013-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130623025929id_/http%3A//www.opengl.org/legal) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the opengl.org privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223063233id_/http%3A//www.opengl.org/legal) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>OpenGL.org Privacy Policy</title>
@@ -52,15 +52,15 @@
 <h4>from games to virtual reality, mobile phones to supercomputers</h4>
 </td></tr></tbody></table>
 </div>     
-<div id="nav" class="clearfix">
+<div id="nav" class="">
 
-<ul id="navlist" class="clearfix">
+<ul id="navlist" class="">
 
 <li style="display:none"><a href="http://www.opengl.org/">Home</a></li>
 
 <li><a href="/documentation/">Documentation</a>
 <ul>
-        <li><a href="/documentation/current_version/">About OpenGL 4.3</a></li>
+        <li><a href="/documentation/current_version/">About OpenGL 4.4</a></li>
         <li><a href="/documentation/glsl/">OpenGL Shading Language</a></li>
         <li><a href="/documentation/extensions/">About OpenGL Extensions</a></li>
         <li><a href="/registry/">OpenGL Registry</a></li>
@@ -118,7 +118,7 @@
    if (document.context) document.write ("&context=" + escape(document.context));
    if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
    document.write ("'><\/scr"+"ipt>");
-//]]>--></script><script type="text/javascript" src="https://www.opengl.org/ads/www/delivery/ajs.php?what=width:728&amp;cb=4786865347&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20130623025929id_/http%3A//www.opengl.org/about/privacy/"></script>
+//]]>--></script><script type="text/javascript" src="https://www.opengl.org/ads/www/delivery/ajs.php?what=width:728&amp;cb=20781303124&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20131223063208id_/http%3A//www.opengl.org/about/privacy/"></script>
 </div>
 
 
