--- a/p/pl/pla/playsides.com.html
+++ b/p/pl/pla/playsides.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the playsides.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624023546id_/http%3A//www.playsides.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the playsides.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223082156id_/http%3A//www.playsides.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Privacy Policy | Playsides.com</title>
-<link rel="stylesheet" href="/css/style.css" type="text/css">
+<link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
 <div id="wrap">
@@ -43,6 +43,14 @@
 </div>
 </div>
 </div>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-43315245-1', 'playsides.com');
+  ga('send', 'pageview');
+</script>
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 var sc_project=8693904; 
