vsb.bc.ca (archived on 2013-12-23)
{
  "alexa_rank": 181837,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2088,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.39,
  "homepage_snapshot_redirected_domain": "vsb.bc.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130923081428id_/http://www.vsb.bc.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130923081428id_/http%3A//vsb.bc.ca",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "vsb.bc.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131223082510id_/http%3A//www.vsb.bc.ca/privacy-policy",
  "policy_title": "Privacy Policy | Vancouver School Board",
  "policy_url": "vsb.bc.ca/privacy-policy",
  "sha1": "3ee05de73eaa8e785b75c307472c1df9c6d1fa97",
  "simhash": 5276104025799404613,
  "simhash_updated": false,
  "site_hostname": "vsb.bc.ca",
  "site_url": "http://vsb.bc.ca",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131223082510",
  "word_count": 339,
  "year": 2013
}

--- a/v/vs/vsb/vsb.bc.ca.html
+++ b/v/vs/vsb/vsb.bc.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vsb.bc.ca privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622154327id_/http%3A//www.vsb.bc.ca/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vsb.bc.ca privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223082510id_/http%3A//www.vsb.bc.ca/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,8 +8,8 @@
 <link rel="canonical" href="http://www.vsb.bc.ca/privacy-policy">
 <meta name="revisit-after" content="1 day">
   	<title>Privacy Policy | Vancouver School Board</title>
-  	<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_da4838bd6df4bca1e72bff7c20622645.css">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_8f8451f3f6dcf3c5926042fcddabf081.css">
+  	<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_f4db3e23291f530c7bd9cce2dd575f88.css">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_c2a80fe89b6bda43fcc024439735ab0f.css">
 	<!--[if IE 8]>
   		<link rel="stylesheet" href="/sites/default/themes/vsb/ie8-fixes.css" type="text/css">
   	<![endif]-->    
@@ -19,7 +19,7 @@
   	<!--[if lte IE 6]>
     	<link rel="stylesheet" href="/sites/default/themes/vsb/ie6-fixes.css" type="text/css">
   	<![endif]-->
-  	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/default/files/js/js_6a70f4e89022ce1b91243ffafd94d88c.js"></script>
+  	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/default/files/js/js_7865963fa2ca45e874c819bc2aa9bee4.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "thickbox": { "close": "Close", "next": "Next \x3e", "prev": "\x3c Prev", "esc_key": "or Esc Key", "next_close": "Next / Close on last", "image_count": "Image !current of !total" }, "popups": { "links": { "a.pop-up": { "reloadWhenDone": false, "width": "700px" } }, "originalPath": "node/693", "defaultTargetSelector": "div.left-corner \x3e div.clear-block:last", "modulePath": "sites/default/modules/popups", "autoCloseFinalMessage": 1 } });
@@ -75,7 +75,7 @@ var flash_overlay_h = 385;
  <input type="text" maxlength="128" name="search_theme_form" id="edit-search-theme-form-1" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Search" class="form-submit">
-<input type="hidden" name="form_build_id" id="form-2555b45d5a4f2639a5d2e18ee5682ec7" value="form-2555b45d5a4f2639a5d2e18ee5682ec7">
+<input type="hidden" name="form_build_id" id="form-8e1cad85cf81d8905a5ae08b434aa835" value="form-8e1cad85cf81d8905a5ae08b434aa835">
 <input type="hidden" name="form_id" id="edit-search-theme-form" value="search_theme_form">
 </div>
 
@@ -102,6 +102,7 @@ var flash_overlay_h = 385;
     <div class="menu-block-3 menu-name-primary-links parent-mlid-0 menu-level-1">
   <ul class="menu"><li class="expanded first menu-mlid-1701"><a href="/schools" title="Schools">Schools</a><ul class="menu"><li class="leaf first menu-mlid-2035"><a href="/schools" title="">School Maps</a></li>
 <li class="leaf menu-mlid-2036 has-children"><a href="/school-registration" title="School Registration">School Registration</a></li>
+<li class="leaf menu-mlid-15737 has-children"><a href="/kindergarten" title="Kindergarten Registration">Kindergarten Registration</a></li>
 <li class="leaf menu-mlid-2037"><a href="/adult-education-centres" title="Adult Education Centres">Adult Education Centres</a></li>
 <li class="leaf menu-mlid-5553 has-children"><a href="/district-reception-and-placement-centre" title="Registration at the District Reception and Placement Centre.">Registration at  DRPC</a></li>
 <li class="leaf last menu-mlid-2038"><a href="/vancouver-learning-network" title="Vancouver Learning Network">Vancouver Learning Network</a></li>
@@ -125,7 +126,6 @@ var flash_overlay_h = 385;
 <li class="leaf last menu-mlid-1266"><a href="/district-news/alerts" title="Alerts &amp; Advisory">Alerts &amp; Advisory</a></li>
 </ul></li>
 <li class="expanded menu-mlid-1754"><a href="/calendars-events" title="Calendars &amp; Events">Calendars</a><ul class="menu"><li class="leaf first menu-mlid-2004 has-children"><a href="/school-year-calendar" title="School Year Calendar">School Year Calendar</a></li>
-<li class="leaf menu-mlid-1756"><a href="/calendars-events/categories" title="General">General</a></li>
 <li class="leaf menu-mlid-1976"><a href="/calendars-events/categories/students-%2526-schools" title="Students &amp; Schools">Students &amp; Schools</a></li>
 <li class="leaf menu-mlid-1968"><a href="/calendars-events/categories/athletics" title="Athletics">Athletics</a></li>
 <li class="leaf menu-mlid-1978"><a href="/calendars-events/categories/programs" title="Programs">Programs</a></li>
@@ -212,6 +212,11 @@ var flash_overlay_h = 385;
   <ul class="menu"><li class="expanded first menu-mlid-1701"><a href="/schools" title="Schools">Schools</a><ul class="menu"><li class="leaf first menu-mlid-2035"><a href="/schools" title="">School Maps</a></li>
 <li class="expanded menu-mlid-2036"><a href="/school-registration" title="School Registration">School Registration</a><ul class="menu"><li class="leaf first last menu-mlid-10032"><a href="/school-registration-faqs" title="School registration frequently asked questions">Registration FAQ</a></li>
 </ul></li>
+<li class="expanded menu-mlid-15737"><a href="/kindergarten" title="Kindergarten Registration">Kindergarten Registration</a><ul class="menu"><li class="leaf first menu-mlid-15746"><a href="/kindergarten-frequently-asked-questions" title="Kindergarten Registration  FAQ">Kindergarten Frequently Asked Questions</a></li>
+<li class="leaf menu-mlid-15739"><a href="/kindergarten-cross-boundary" title="Cross-Boundary Application Process">Kindergarten Cross Boundary</a></li>
+<li class="leaf menu-mlid-16366"><a href="/kindergarten-punjabi-translation" title="ਕਿੰਡਰਗਾਰਟਨ ਰਜਿਸਟਰੇਸ਼ਨ">ਕਿੰਡਰਗਾਰਟਨ ਰਜਿਸਟਰੇਸ਼ਨ</a></li>
+<li class="leaf last menu-mlid-16365"><a href="/kindergarten-chinese-translation" title="幼儿园报名">幼儿园报名</a></li>
+</ul></li>
 <li class="leaf menu-mlid-2037"><a href="/adult-education-centres" title="Adult Education Centres">Adult Education Centres</a></li>
 <li class="expanded menu-mlid-5553"><a href="/district-reception-and-placement-centre" title="Registration at the District Reception and Placement Centre.">Registration at  DRPC</a><ul class="menu"><li class="leaf first last menu-mlid-13552"><a href="/district-publications/find-school-assignments-multicultural-liaison-workers" title="Find the school assignments for Multicultural Liaison Workers">Find the school assignments for Multicultural Liaison Workers</a></li>
 </ul></li>
@@ -240,7 +245,6 @@ var flash_overlay_h = 385;
 <li class="leaf menu-mlid-5562"><a href="/pro-d-days-2010-2011" title="Pro-D days 2012-2013">Pro-D days</a></li>
 <li class="leaf last menu-mlid-5561"><a href="/school-bell-times" title="School bell times">School bell times</a></li>
 </ul></li>
-<li class="leaf menu-mlid-1756"><a href="/calendars-events/categories" title="General">General</a></li>
 <li class="leaf menu-mlid-1976"><a href="/calendars-events/categories/students-%2526-schools" title="Students &amp; Schools">Students &amp; Schools</a></li>
 <li class="leaf menu-mlid-1968"><a href="/calendars-events/categories/athletics" title="Athletics">Athletics</a></li>
 <li class="leaf menu-mlid-1978"><a href="/calendars-events/categories/programs" title="Programs">Programs</a></li>
@@ -255,15 +259,15 @@ var flash_overlay_h = 385;
 <li class="leaf menu-mlid-10082"><a href="/community-partners-and-funders" title="Community Partners and Funders">Partners &amp; Funders</a></li>
 <li class="leaf last menu-mlid-10083"><a href="/community-school-teams-news" title="Community School Teams in the news">CST in the news</a></li>
 </ul></li>
-<li class="expanded menu-mlid-10006"><a href="/dpac" title="District Parent Advisory Council">District Parent Advisory Council (DPAC)</a><ul class="menu"><li class="leaf first menu-mlid-10007"><a href="/who-are-dpac" title="Who are DPAC">Who are the DPAC Executive Members?</a></li>
-<li class="leaf menu-mlid-10008"><a href="/how-contact-your-dpac-representative" title="How to contact your DPAC representative">DPAC contacts</a></li>
+<li class="expanded menu-mlid-10006"><a href="/dpac" title="District Parent Advisory Council">District Parent Advisory Council (DPAC)</a><ul class="menu"><li class="leaf first menu-mlid-10007"><a href="/who-are-dpac" title="The DPAC Executive">The DPAC Executive</a></li>
 <li class="leaf menu-mlid-10009"><a href="/dpac-executive-minutes" title="DPAC Executive Minutes &amp; Highlights">Minutes</a></li>
 <li class="leaf menu-mlid-10010"><a href="/pacdpac-publications" title="PAC/DPAC publications">Publications</a></li>
 <li class="leaf menu-mlid-10011"><a href="/dpac-bylaws" title="DPAC Bylaws">Bylaws</a></li>
 <li class="leaf menu-mlid-10012"><a href="/dpac-election-information" title="District Parent Advisory Council Executive Elections">Elections</a></li>
 <li class="leaf menu-mlid-10013"><a href="/DPAC-video-gallery" title="DPAC Video Gallery">Video Gallery</a></li>
 <li class="leaf menu-mlid-10035"><a href="/21st-century-learning" title="21st century learning">21st century learning</a></li>
-<li class="leaf last menu-mlid-13571"><a href="/dpac-news-views" title="DPAC News &amp; Views">DPAC News &amp; Views</a></li>
+<li class="leaf menu-mlid-13571"><a href="/dpac-news-views" title="DPAC News &amp; Views">DPAC News &amp; Views</a></li>
+<li class="leaf last menu-mlid-10008"><a href="/how-contact-your-dpac-representative" title="How to contact your DPAC representative">DPAC contacts</a></li>
 </ul></li>
 <li class="leaf menu-mlid-10071"><a href="/emergencypreparedness" title="Emergency preparedness for your family">Emergency preparedness</a></li>
 <li class="expanded menu-mlid-9921"><a href="/english-second-language-information" title="English language learner information">Info for ELL parents/students</a><ul class="menu"><li class="leaf first menu-mlid-9915"><a href="/multilanguage-brochures" title="Multi-Language Brochures">Multi-Language Brochures</a></li>
@@ -317,12 +321,7 @@ var flash_overlay_h = 385;
 <li class="expanded last menu-mlid-5486"><a href="/advocacy" title="Trustees' advocacy work">Trustees' advocacy work</a><ul class="menu"><li class="leaf first menu-mlid-5490"><a href="/about-vsb/trustees/advocacy-work/advocacy-letters-sent" title="Advocacy correspondence">Advocacy correspondence</a></li>
 <li class="leaf menu-mlid-5488"><a href="/about-vsb/trustees/advocacy-work/mla-contacts" title="Members of the Legislative Assembly - contacts">MLA Contacts</a></li>
 <li class="leaf menu-mlid-5489"><a href="/about-vsb/trustees/advocacy-work/members-parliament-contacts" title="Members of Parliament Contacts">MP Contacts</a></li>
-<li class="leaf menu-mlid-5491"><a href="/about-vsb/trustees/advocacy-work/%252Fvsb-in-the-news" title="Trustees in the news">Trustees in the news</a></li>
-<li class="expanded menu-mlid-10026"><a href="/VSBfans" title="Be a Fan Vancouver Public Schools">Be A Fan campaign</a><ul class="menu"><li class="leaf first menu-mlid-10027"><a href="/about-be-fan" title="About Be A Fan">About Be A Fan</a></li>
-<li class="expanded last menu-mlid-10069"><a href="/be-fan-chief-constable-jim-chu" title="Be A Fan - Chief Constable Jim Chu">Be A Fan - Jim Chu</a><ul class="menu"><li class="leaf first last menu-mlid-10028"><a href="/q-and-jim-chu" title="Q and A with Chief Constable Jim Chu">Q and A Jim Chu</a></li>
-</ul></li>
-</ul></li>
-<li class="leaf last menu-mlid-10070"><a href="/leadership-candidates-questionnaire" title="Leadership candidates questionnaire">Leadership candidates questionnaire</a></li>
+<li class="leaf last menu-mlid-5491"><a href="/about-vsb/trustees/advocacy-work/%252Fvsb-in-the-news" title="Trustees in the news">Trustees in the news</a></li>
 </ul></li>
 </ul></li>
 <li class="expanded menu-mlid-1840"><a href="/about-vsb" title="Our District">Our District</a><ul class="menu"><li class="expanded first menu-mlid-5564"><a href="/administration" title="Administration Contacts">Administration Contacts</a><ul class="menu"><li class="leaf first menu-mlid-10034"><a href="/office-superintendent" title="Office of the Superintendent">Superintendent Office</a></li>
@@ -349,8 +348,7 @@ var flash_overlay_h = 385;
 <li class="expanded menu-mlid-9868"><a href="/sustainable-school-design" title="Sustainable School Design">Sustainable School Design</a><ul class="menu"><li class="leaf first last menu-mlid-9909"><a href="/charles-dickens-leed-school" title="Charles Dickens - LEED school">LEED - Dickens</a></li>
 </ul></li>
 <li class="leaf menu-mlid-9869"><a href="/heritage" title="Heritage">Heritage</a></li>
-<li class="leaf menu-mlid-10025"><a href="/population-and-enrolment-trends" title="Population, Development and Enrolment Trends">Population, Development and Enrolment Trends</a></li>
-<li class="leaf last menu-mlid-9875"><a href="/planning-and-facilities-information" title="Planning and Facilities Information">Planning Contacts</a></li>
+<li class="leaf last menu-mlid-10025"><a href="/population-and-enrolment-trends" title="Population, Development and Enrolment Trends">Population, Development and Enrolment Trends</a></li>
 </ul></li>
 <li class="leaf menu-mlid-10087"><a href="/purchasing" title="Purchasing and Administrative Services">Purchasing and Administrative Services</a></li>
 <li class="leaf menu-mlid-4909"><a href="http://www.vsb.bc.ca/dpac" title="">DPAC</a></li>
